--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,3 @@
 <script>
-	window.location.href='0.3.9/ractive-js-documentation'
+	window.location.href='latest/ractive-js-documentation'
 </script>
