--- a/templates/page.html
+++ b/templates/page.html
@@ -22,9 +22,17 @@
 
 		<h1>[[page.name]]</h1>
 	</header>
+	<aside class="left-side">
+		<nav class="left_menu">
 
+			[[[nav.html]]]
+
+		</nav>
+	</aside>
 	<main>
-		[[[page.html]]]
+		<article>
+			[[[page.html]]]
+		</article>
 	</main>
 
 	<!-- JS -->
