add edit link to all pages

--- a/templates/page.html
+++ b/templates/page.html
@@ -18,6 +18,7 @@
 	<header class='docs-header'>
 		<nav>
 			<a href='http://ractivejs.org'>&laquo; back to ractivejs.org</a>
+			<a class='edit-link' href='[[page.editurl]]'><span>edit this page</span></a>
 		</nav>
 
 		<h1>[[page.name]]</h1>
