--- a/scss/header.scss
+++ b/scss/header.scss
@@ -8,3 +8,17 @@
 	right: 0;
 	padding: 0.5em;
 }
+
+a.edit-link {
+	float: right;
+	background: #729d34 url(assets/edit.png) no-repeat 0.4em 55%;
+	padding: 0em 0.5em 0em 1.5em;
+	background-size: 1em 1em;
+	border-radius: 0.2em;
+	color: white;
+}
+
+.edit-link span {
+	font-size: 0.8em;
+	color: white;
+}
