--- a/templates/page.html
+++ b/templates/page.html
@@ -14,14 +14,23 @@
 </head>
 
 <body class='example'>
+	<div class="header">
+		<div class="title">
+			<h1>Ractive.js</h1>
+			<p>Next-generation DOM manipulation</p>
+		</div>
 
-	<header class='docs-header'>
-		<nav>
-			<a href='http://ractivejs.org'>&laquo; back to ractivejs.org</a>
-		</nav>
-
-		<h1>[[page.name]]</h1>
-	</header>
+		<ul class="menu">
+			<li><a href="http://ractivejs.org">Home</a></li>
+			<li><a href="http://blog.ractivejs.org">Blog</a></li>
+			<li><a href="http://learn.ractivejs.org">Tutorials</a></li>
+			<li><a href="http://examples.ractivejs.org">Examples</a></li>
+			<li><a href="plugins">Plugins</a></li>
+			<li>Docs</li>
+			<li><a href="download">Download</a></li>
+			<li><a href="https://github.com/RactiveJS/Ractive">GitHub</a></li>
+		</ul>
+	</div>
 	<aside class="left-side">
 		<nav class="left_menu">
 
@@ -30,6 +39,9 @@
 		</nav>
 	</aside>
 	<main>
+		<header class='docs-header'>
+			<h1>[[page.name]]</h1>
+		</header>
 		<article>
 			[[[page.html]]]
 		</article>
