Docs for Ractive might as well use Ractive...

--- a/templates/page.html
+++ b/templates/page.html
@@ -49,6 +49,9 @@
 
 	<!-- JS -->
 	<script src='../js/prettify.js'></script>
+	<script src="../js/Ractive-legacy.min.js"></script>
+	<script src="../js/Ractive-transitions-slide.js"></script>
+
 	<script>
 
 		prettyPrint();
