--- a/templates/page.html
+++ b/templates/page.html
@@ -38,7 +38,7 @@
 
 		</nav>
 	</aside>
-	<main>
+	<main class="main-content">
 		<header class='docs-header'>
 			<h1>[[page.name]]</h1>
 		</header>
@@ -49,13 +49,10 @@
 
 	<!-- JS -->
 	<script src='../js/prettify.js'></script>
-	<script src="../js/Ractive-legacy.min.js"></script>
-	<script src="../js/Ractive-transitions-slide.js"></script>
-
 	<script>
 
 		prettyPrint();
-
+		
 		// Googlytics
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
