Give everything YAML titles

--- a/docs/0.3.9/Adaptors.md.hbs
+++ b/docs/0.3.9/Adaptors.md.hbs
@@ -1,4 +1,6 @@
-[[Home]] > [[Plugins]] > [[Adaptors]]
+---
+title: Adaptors
+---
 
 Adaptors are a way of teaching Ractive to communicate seamlessly with other libraries such as Backbone. This means that you can, for example, have some or all of your app's data handled by Backbone - including fetching from and saving to your server, validation, sorting, filtering and so on - but still build a reactive user interface using Ractive, without having to create custom View classes or adding a whole load of event binding code.
 
