--- a/docs/0.3.9/Array modification.md.hbs
+++ b/docs/0.3.9/Array modification.md.hbs
@@ -1,5 +1,6 @@
-[[Home]] > [[Glossary]] > [[Array modification]]
-
+---
+title: Array Modification
+---
 By default, Ractive will intercept the *mutator methods* (`pop`, `push`, `shift`, `unshift`, `splice`, `sort` and `reverse`) of arrays that it [depends on](dependants) for more convenient data binding.
 
 Consider the following:
