--- a/docs/0.3.9/Dependants.md.hbs
+++ b/docs/0.3.9/Dependants.md.hbs
@@ -1,4 +1,6 @@
-[[Home]] > [[Glossary]] > [[Dependants]]
+---
+title: Dependants
+---
 
 Ractive maintains a *dependency graph* in order to do the minimum amount of work necessary to keep the DOM up-to-date.
 
