--- a/docs/0.3.9/Expressions.md.hbs
+++ b/docs/0.3.9/Expressions.md.hbs
@@ -1,5 +1,6 @@
-[[Home]] > [[Glossary]] > [[Expressions]]
-
+---
+title: Expressions
+---
 Expressions allow you to use logic within a template. At their simplest, that may just mean a basic arithmetic operation, such as converting to percentages, or making your [index references](Mustaches#index-references) start at 1 rather than 0:
 
 ```html
