--- a/docs/0.3.9/Glossary.md.hbs
+++ b/docs/0.3.9/Glossary.md.hbs
@@ -1,5 +1,6 @@
-[[Home]] > [[Glossary]]
-
+---
+title: Glossary
+---
 Ractive aims to be as self-explanatory as possible - you shouldn't have to trawl through documentation in order to be productive with it.
 
 That said, if you're curious about some of the inner workings of Ractive, and want to better understand some of the concepts it uses, these pages may help.
