--- a/docs/0.3.9/Initialisation options.md.hbs
+++ b/docs/0.3.9/Initialisation options.md.hbs
@@ -1,5 +1,6 @@
-[[Home]] > [[API reference]] > [[Initialisation options]]
-
+---
+title: Initialisation Options
+---
 Create a new Ractive instance using the specified options. For example:
 
 ```js
