--- a/docs/0.3.9/Keypaths.md.hbs
+++ b/docs/0.3.9/Keypaths.md.hbs
@@ -1,5 +1,6 @@
-[[Home]] > [[Glossary]] > [[Keypaths]]
-
+---
+title: Keypaths
+---
 The main way to interact with a Ractive instance is by setting *keypaths*. A keypath is a string representing the location of a piece of data:
 
 ```js
