--- a/docs/0.3.9/Magic mode.md.hbs
+++ b/docs/0.3.9/Magic mode.md.hbs
@@ -1,5 +1,6 @@
-[[Home]] > [[Glossary]] > [[Magic mode]]
-
+---
+title: Magic Mode
+---
 Normally, you would update data using [[ractive.set()]], [[ractive.animate()]], or the [array mutator methods](array-modification).
 
 If you're fortunate enough to be developing for modern browsers only, however, you have another option: magic mode. Magic mode uses ES5 accessors to allow you to do this:
