--- a/docs/0.3.9/Observers.md.hbs
+++ b/docs/0.3.9/Observers.md.hbs
@@ -1,5 +1,6 @@
-[[Home]] > [[Glossary]] > [[Observers]]
-
+---
+title: Observers
+---
 ## Like publish/subscribe, but different
 
 A common pattern in modern JavaScript is to make models *observable*, using the traditional [publish/subscribe](http://addyosmani.com/blog/understanding-the-publishsubscribe-pattern-for-greater-javascript-scalability/) mechanism.
