--- a/docs/0.3.9/Partials.md.hbs
+++ b/docs/0.3.9/Partials.md.hbs
@@ -1,5 +1,6 @@
-[[Home]] > [[Glossary]] > [[Partials]]
-
+---
+title: Partials
+---
 A partial is a template snippet which can be inserted into templates, or indeed other partials. They help to keep templates uncluttered and easy to read. In this example, we're creating a `{{>thumbnail}}` partial:
 
 ```html
