--- a/docs/0.3.9/Ractive.adaptors.md.hbs
+++ b/docs/0.3.9/Ractive.adaptors.md.hbs
@@ -1,5 +1,6 @@
-[[Home]] > [[API Reference]] > [[Ractive.adaptors]]
-
+---
+title: Ractive.adaptors
+---
 [[Adaptors]] are a way of teaching Ractive to communicate with other libraries, such as Backbone.
 
 `Ractive.adaptors` is a registry of globally available adaptors. When you create a Ractive instance with adaptors, you can pass in a reference to the adaptor itself, or the name of an adaptor on `Ractive.adaptors`:
