--- a/docs/0.3.9/Ractive.easing.md.hbs
+++ b/docs/0.3.9/Ractive.easing.md.hbs
@@ -1,5 +1,6 @@
-[[Home]] > [[API reference]] > [[Ractive.easing]]
-
+---
+title: Ractive.easing
+---
 This is a set of globally available easing functions, which are used with [[ractive.animate()]] and in some [[transitions]].
 
 Four are included by default - `linear`, `easeIn`, `easeOut` and `easeInOut`.
