--- a/docs/0.3.9/Ractive.extend().md.hbs
+++ b/docs/0.3.9/Ractive.extend().md.hbs
@@ -1,5 +1,6 @@
-[[Home]] > [[API reference]] > [[Ractive.extend()]]
-
+---
+title: Ractive.extend()
+---
 Ractive is more than a library; it is a platform. It makes it easier to create reusable, but specialised, blocks of functionality such as to-do lists, slideshows, bar charts, text editors, and so on.
 
 Though it's technically incorrect, we'll refer to these as *subclasses* of the Ractive *base class*. In order to create them, we use `Ractive.extend()`.
