--- a/docs/0.3.9/Ractive.partials (global).md.hbs
+++ b/docs/0.3.9/Ractive.partials (global).md.hbs
@@ -1,5 +1,6 @@
-[[Home]] > [[API reference]] > [Ractive.partials](Ractive.partials %28global%29)
-
+---
+title: Ractive.parials (global)
+---
 [[Partials]] can be made globally available to Ractive instances by adding them to `Ractive.partials`:
 
 ```js
