--- a/docs/0.3.9/Ractive.partials (instance).md.hbs
+++ b/docs/0.3.9/Ractive.partials (instance).md.hbs
@@ -1,5 +1,6 @@
-[[Home]] > [[API reference]] > [ractive.partials](Ractive.partials %instance%29)
-
+---
+title: Ractive.parials (instance)
+---
 Instance-specific [[partials]] exist as properties of `ractive.partials`.
 
 Ordinarily, these are declared as an [initialisation option](initialisation-options). However it is possible, should you need to, to add or replace these partials (obviously, doing so wouldn't affect partials that were already rendered):
