--- a/docs/0.3.9/Templates.md.hbs
+++ b/docs/0.3.9/Templates.md.hbs
@@ -1,5 +1,6 @@
-[[Home]] > [[Glossary]] > [[Templates]]
-
+---
+title: Templates
+---
 In Ractive, templates (until they get [parsed](ractive-parse), at least) are just snippets of HTML, with a few differences. A template should be *well-formed* - Ractive's parser is not quite as forgiving as the HTML parsers found in browsers (though it does allow things like implicitly closed elements).
 
 Strictly speaking, a Ractive template is not valid HTML (for one thing, 'valid HTML' describes an entire document, and we're only dealing with snippets), but *it doesn't matter*, even if you're the kind of obsessive who can't stand a single error in the [W3C validator](http://validator.w3.org/), because it all comes out as lovely standards-compliant DOM.
