--- a/docs/0.3.9/Transitions.md.hbs
+++ b/docs/0.3.9/Transitions.md.hbs
@@ -1,5 +1,6 @@
-[[Home]] > [[Plugins]] > [[Transitions]]
-
+---
+title: Transitions
+---
 Transitions allow you to control how elements are first rendered and how they are removed from the DOM. They are added with `intro` and `outro` directives, which look like attributes within a template (but are not rendered to the DOM as attributes):
 
 ```html
