--- a/docs/0.3.9/Two-way binding.md.hbs
+++ b/docs/0.3.9/Two-way binding.md.hbs
@@ -1,5 +1,6 @@
-[[Home]] > [[Glossary]] > [[Two‐way binding]]
-
+---
+title: Two-way Binding 
+---
 By default, a Ractive instance will update its internal model based on user input, if you have `<input>`, `<textarea>` or `<select>` elements.
 
 If that's unhelpful for your app, you can disable it by passing `twoway: false` as an [initialisation option](Initialisation-options).
