--- a/docs/0.3.9/Using Ractive with Backbone.md.hbs
+++ b/docs/0.3.9/Using Ractive with Backbone.md.hbs
@@ -1,5 +1,6 @@
-[[Home]] > [[Tips]] > [[Using Ractive with Backbone]]
-
+---
+title: Using Ractive with Backbone
+---
 If your app uses Backbone to manage your models and collections, you can use them seamlessly with Ractive by using an [adaptor](Ractive.adaptors).
 
 [Download the Backbone adaptor here](https://github.com/RactiveJS/Ractive/blob/master/plugins/adaptors/Backbone.js), or see an [example](http://ractivejs.org/examples/backbone/).
