--- a/docs/0.3.9/Using Ractive with RequireJS.md.hbs
+++ b/docs/0.3.9/Using Ractive with RequireJS.md.hbs
@@ -1,5 +1,6 @@
-[[Home]] > [[Tips]] > [[Using Ractive with RequireJS]]
-
+---
+title: Using Ractive with RequireJS
+---
 *Psst! Looking for the [Ractive + RequireJS sample application](https://github.com/RactiveJS/requirejs-ractive/tree/master/sample)?*
 
 If Ractive detects that you're using an [AMD](https://github.com/amdjs/amdjs-api/wiki/AMD) module loader (in other words, if `typeof define !== 'undefined' && define.amd`) such as [RequireJS](http://requirejs.org/), it will register itself as an AMD module rather than as a browser global.
