--- a/docs/0.3.9/Valid selectors.md.hbs
+++ b/docs/0.3.9/Valid selectors.md.hbs
@@ -1,5 +1,6 @@
-[[Home]] > [[Notes]] > [[Valid selectors]]
-
+---
+title: Valid Selectors
+---
 When creating a new Ractive instance, the `el` option can be an element, a jQuery (or equivalent) collection, or a string.
 
 If it's a string, it will first be treated as an ID. If there is no element on the page whose ID matches the string, Ractive will treat the string as a CSS selector and use `document.querySelector`.
