--- a/docs/0.3.9/ractive.animate().md.hbs
+++ b/docs/0.3.9/ractive.animate().md.hbs
@@ -1,4 +1,6 @@
-[[Home]] > [[API reference]] > [[ractive.animate()]]
+---
+title: ractive.animate()
+---
 
 Similar to [[ractive.set()]], this will update the data and re-render any affected mustaches (and notify [[observers]]).
 
