--- a/docs/0.3.9/ractive.find().md.hbs
+++ b/docs/0.3.9/ractive.find().md.hbs
@@ -1,5 +1,6 @@
-[[Home]] > [[API reference]] > [[ractive.find()]]
-
+---
+title: ractive.find()
+---
 Returns the first element inside a given Ractive instance matching a CSS selector. This is similar to doing `this.el.querySelector(selector)` (though it doesn't actually use `querySelector()`).
 
 
