--- a/docs/0.3.9/ractive.findAll().md.hbs
+++ b/docs/0.3.9/ractive.findAll().md.hbs
@@ -1,5 +1,6 @@
-[[Home]] > [[API reference]] > [[ractive.findAll()]]
-
+---
+title: ractive.findAll()
+---
 This method is similar to [[ractive.find()]], with two important differences. Firstly, it returns a list of elements matching the selector, rather than a single node. Secondly, it can return a *live* list, which will stay in sync with the DOM as it continues to update.
 
 
