--- a/docs/0.3.9/ractive.get().md.hbs
+++ b/docs/0.3.9/ractive.get().md.hbs
@@ -1,5 +1,6 @@
-[[Home]] > [[API reference]] > [[ractive.get()]]
-
+---
+title: ractive.get()
+---
 > ### ractive.get( keypath )
 > Returns the value at `keypath` (see [[Keypaths]])
 
