--- a/docs/0.3.9/ractive.nodes.md.hbs
+++ b/docs/0.3.9/ractive.nodes.md.hbs
@@ -1,5 +1,6 @@
-[[Home]] > [[API reference]] > [[ractive.nodes]]
-
+---
+title: ractive.nodes
+---
 Each Ractive instance has a `nodes` property, which is a hash of all the elements within a Ractive that have an `id` attribute:
 
 ```html
