--- a/docs/0.3.9/ractive.observe().md.hbs
+++ b/docs/0.3.9/ractive.observe().md.hbs
@@ -1,5 +1,6 @@
-[[Home]] > [[API reference]] > [[ractive.observe()]]
-
+---
+title: ractive.observe()
+---
 Observes the data at a particular [keypath](keypaths). Unless specified otherwise, the *observer* will be *initialised* once as soon as you create the observer, with `undefined` as `oldValue`. Thereafter it will be *notified* whenever the *observed keypath* changes.
 
 See [[Observers]] for more detail.
