--- a/docs/0.3.9/ractive.on().md.hbs
+++ b/docs/0.3.9/ractive.on().md.hbs
@@ -1,5 +1,6 @@
-[[Home]] > [[API reference]] > [[ractive.on()]]
-
+---
+title: ractive.on()
+---
 Subscribe to [[events]].
 
 > ### ractive.on( eventName, handler )
