--- a/docs/0.3.9/ractive.set().md.hbs
+++ b/docs/0.3.9/ractive.set().md.hbs
@@ -1,5 +1,6 @@
-[[Home]] > [[API reference]] > [[ractive.set()]]
-
+---
+title: ractive.set()
+---
 Updates data and triggers a re-render of any mustaches that are affected (directly or indirectly) by the change. Any [[observers]] of affected [[keypaths]] will be notified.
 
 A `set` [event](events) will be fired with `keypath` and `value` as arguments (or `map`, if you set multiple options at once).
