--- a/docs/0.3.9/ractive.transitions (instance).md.hbs
+++ b/docs/0.3.9/ractive.transitions (instance).md.hbs
@@ -1,5 +1,6 @@
-[[Home]] > [[API reference]] > [ractive.transitions](ractive.transitions %28instance%29)
-
+---
+title: ractive.transitions (instance)
+---
 Each Ractive instance has a `transitions` property, which contains [transition functions](transitions) specific to that instance.
 
 When an element with a specified `intro` or `outro` transition is added or removed, Ractive first looks at `ractive.transitions` to see if it can find the right transition function. If it fails, it then looks in `Ractive.transitions` (the [global transitions registry](ractive-transitions-global)).
