--- a/docs/0.3.9/ractive.updateModel().md.hbs
+++ b/docs/0.3.9/ractive.updateModel().md.hbs
@@ -1,5 +1,6 @@
-[[Home]] > [[API reference]] > [[ractive.updateModel()]]
-
+---
+title: ractive.updateModel()
+---
 If you programmatically manipulate inputs and other elements that have [[two‐way binding]] set up, your model can get out of sync. In these cases, we need to force a resync with `ractive.updateModel()`:
 
 ```js
