--- a/docs/0.3.9/Decorators.md.hbs
+++ b/docs/0.3.9/Decorators.md.hbs
@@ -1,5 +1,6 @@
-[[Home]] > [[Plugins]] > [[Decorators]]
-
+---
+title: Decorators
+---
 A decorator is a simple way to add behaviour to a node when it is rendered, or to augment it in some way. Decorators are a good way to teach Ractive tricks from other libraries, such as [jQuery UI](http://jqueryui.com/).
 
 You can use existing decorators from the [[Plugins]] page, or you can easily create your own.
