--- a/docs/0.3.9/Legacy builds.md.hbs
+++ b/docs/0.3.9/Legacy builds.md.hbs
@@ -1,5 +1,6 @@
-[[Home]] > [[Glossary]] > [[Legacy builds]]
-
+---
+title: Legacy Builds
+---
 In a perfect world, every copy of Internet Explorer below version ~~10~~ 11 would be living out its days in a pleasant retirement home, playing bingo and fighting over the remote control with Lotus Notes, and the IE dev team would adopt a modern release cycle so that newer versions weren't constantly playing catch-up with the browsers built on open source.
 
 Sadly that's not the case, and it's not just IE that's the problem - there are plenty of IT departments out there who think it's perfectly fine to lock their users to a version of Firefox that should have collected its bus pass a long time ago.
