--- a/docs/0.3.9/Ractive.parse().md.hbs
+++ b/docs/0.3.9/Ractive.parse().md.hbs
@@ -1,5 +1,6 @@
-[[Home]] > [[API reference]] > [[Ractive.parse()]]
-
+---
+title: Ractive.parse()
+---
 Before templates can be used, they must be parsed. Parsing involves reading in a template string and converting it to a tree-like data structure, much like a browser's parser would.
 
 Ordinarily, parsing happens automatically. However you can use `Ractive.parse()` as a standalone function if, for example, you want to parse templates as part of your build process (it works in Node.js). See also [[Using Ractive with RequireJS]].
