--- a/docs/0.3.9/Ractive.transitions (global).md.hbs
+++ b/docs/0.3.9/Ractive.transitions (global).md.hbs
@@ -1,5 +1,6 @@
-[[Home]] > [[API reference]] > [Ractive.transitions](Ractive.transitions %28global%29)
-
+---
+title: Ractive.transitions (global)
+---
 This is a set of globally-available (i.e, shared between all Ractive instances) [transition functions](transitions). If an element with a specified `intro` or `outro` is added or removed, Ractive will first try to find the transition function on [ractive.transitions](ractive-transitions-instance) - if it fails, it will then look in `Ractive.transitions`.
 
 A few standard transition functions are included 'out of the box', such as `fade`. (Pull requests welcome!)
