--- a/docs/0.3.9/Routing.md.hbs
+++ b/docs/0.3.9/Routing.md.hbs
@@ -1,5 +1,6 @@
-[[Home]] > [[Tips]] > [[Routing]]
-
+---
+title: Routing
+---
 Client-side routing allows you to navigate around a web app without having to reload the page, using the [HTML5 history API](http://diveintohtml5.info/history.html) (or hash fragments at the end of a URL, in older browsers).
 
 For a good introduction to routing, see [this Stack Overflow answer](http://stackoverflow.com/a/10076125/2742396).
