--- a/docs/0.3.9/ractive.fire().md.hbs
+++ b/docs/0.3.9/ractive.fire().md.hbs
@@ -1,5 +1,6 @@
-[[Home]] > [[API reference]] > [[ractive.fire()]]
-
+---
+title: ractive.fire()
+---
 Fires an event, which will be received by handlers that were bound using `ractive.on`. In practical terms, you would use mostly likely use this with [[Ractive.extend()]], to allow applications to hook into your subclass.
 
 
