--- a/docs/0.3.9/ractive.off().md.hbs
+++ b/docs/0.3.9/ractive.off().md.hbs
@@ -1,5 +1,6 @@
-[[Home]] > [[API reference]] > [[ractive.off()]]
-
+---
+title: ractive.off()
+---
 Removes an event handler, several event handlers, or all event handlers.
 
 To remove a single handler, you must specify both the event name and the handler. If you only specify the event name, all handlers bound to that event name will be removed. If you specify neither event name nor handler, **all** event handlers will be removed.
