--- a/docs/0.3.9/ractive.teardown().md.hbs
+++ b/docs/0.3.9/ractive.teardown().md.hbs
@@ -1,5 +1,6 @@
-[[Home]] > [[API reference]] > [[ractive.teardown()]]
-
+---
+title: ractive.teardown()
+---
 Unrenders this Ractive instance, removing any event handlers that were bound automatically by Ractive.
 
 Calling `ractive.teardown()` causes a `teardown` [event](events) to be fired - this is most useful with [[Ractive.extend()]] as it allows you to clean up anything else (event listeners and other bindings) that are part of the subclass.
